[package]
name = "acril"
version = "0.1.0"
edition = "2021"
description = "A microservice/actor/whatever framework."

[workspace]
members = [".", "http", "macros"]
resolver = "2"

[workspace.dependencies]
http-types = { version = "2.12.0", default-features = false }
async-std = "1.12"

[dependencies]
acril-macros = { path = "./macros", optional = true }
serde_urlencoded = "0.7.1"
async-std.workspace = true
acril-http = { optional = true, path = "http" }
http-types.workspace = true

[features]
beta = []
http = ["dep:acril-http"]
nightly = []
macros = ["dep:acril-macros"]
default = ["macros", "nightly"]

[[example]]
name = "server"
required-features = ["http"]

[[example]]
name = "client"
required-features = ["http"]

[[example]]
name = "builder"
required-features = ["macros"]

[dev-dependencies]
async-std = { version = "1.12", features = [ "attributes" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
