[package]
name = "acril"
version = "0.1.0"
edition = "2021"
description = "A microservice/actor/whatever framework."

[workspace]
members = [".", "http", "macros"]
resolver = "2"

[workspace.dependencies]
http-types = { version = "2", default-features = false }
tokio = { version = "1", features = ["time", "net", "io-util"] }
async-compat = "0.2"

[dependencies]
acril-macros = { path = "./macros", optional = true }
serde_urlencoded = "0.7.1"
acril-http = { optional = true, path = "http" }
tracing = "0.1"
async-tungstenite = { version = "0.24", optional = true }
tokio = {workspace=true}
http-types = {workspace=true}
pin-project = "1.1.3"

[features]
http = ["dep:acril-http"]
websocket = ["dep:async-tungstenite", "http"]
macros = ["dep:acril-macros"]
default = ["macros"]

[[example]]
name = "server"
required-features = ["http"]

[[example]]
name = "client"
required-features = ["http"]

[[example]]
name = "builder"
required-features = ["macros"]

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
