[package]
name = "acril"
version = "0.1.0"
edition = "2021"
description = "A microservice/actor/whatever framework."
repository = "https://github.com/PassivityTrading/acril"
license = "MIT"

[workspace]
members = [".", "http", "macros"]
resolver = "2"

[workspace.dependencies]
http-types = { version = "2", default-features = false }
futures = "0.3"

[dependencies]
acril-macros = { path = "./macros", optional = true, version = "0.1.0" }
serde_urlencoded = { version = "0.7.1", optional = true }
acril-http = { optional = true, path = "http", version = "0.1.0" }
tracing = "0.1"
async-tungstenite = { version = "0.24", optional = true }
http-types = { workspace = true, optional = true }
futures = { workspace = true }
pin-project = "1.1.3"

[features]
http = ["dep:acril-http", "dep:http-types"]
websocket = ["dep:async-tungstenite", "http"]
macros = ["dep:acril-macros", "dep:serde_urlencoded"]
default = []

[[example]]
name = "client"
required-features = ["http"]

[[example]]
name = "builder"
required-features = ["macros"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
