[package]
name = "acril-http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.5.1"
async-dup = "1.2.2"
async-global-executor = "2.3.1"
async-io = "1.13.0"
futures-lite = "1.13.0"
http-types = { version = "2.9.0", default-features = false }
httparse = "1.3.4"
log = "0.4.11"
pin-project = "1.0.2"
