[package]
name = "acril-http"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std.workspace = true
http-types.workspace = true
log = "0.4.11"
pin-project = "1.0.2"
futures = { version = "0.3.1" }
async-tls = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.25" }
wasm-bindgen = { version = "0.2.48" }
wasm-bindgen-futures = { version = "0.4.5" }
send_wrapper = { version = "0.6.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-channel = "1.5.1"
async-dup = "1.2.2"
async-global-executor = "2.3.1"
async-io = "1.13.0"
httparse = "1.3.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.25"
features = [
    "AbortSignal",
    "Headers",
    "ObserverCallback",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
    "WorkerGlobalScope",
]
