[package]
name = "acril-http"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.11"
pin-project = "1.0.2"
futures = {workspace=true}
tokio-rustls = "0.25"
tokio = {workspace=true}
http-types = {workspace=true}
async-compat = {workspace=true}
webpki-roots = "0.26.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.25" }
wasm-bindgen = { version = "0.2.48" }
wasm-bindgen-futures = { version = "0.4.5" }
send_wrapper = { version = "0.6.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-channel = "2"
async-dup = "1"
async-global-executor = "2"
async-io = "2"
httparse = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.25"
features = [
    "AbortSignal",
    "Headers",
    "ObserverCallback",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
    "WorkerGlobalScope",
]
